# sql-client

./: .gitignore  Cargo.toml  LICENSE  README.md
sql-client/: Cargo.toml  log4rs.yaml
sql-client/src/: application_intent.rs  connection_state.rs  db_connection_internal.rs  db_connection_pool.rs  db_connection_string_defaults.rs  db_connection_string_keywords.rs  db_connection_string_utils.rs  lib.rs  pool_blocking_period.rs  sql_authentication_method.rs  sql_client_error.rs  sql_column_encryption_setting.rs  sql_connection.rs  sql_connection_attestation_protocol.rs  sql_connection_ip_address_preference.rs  sql_connection_string.rs  sql_connection_string_builder.rs  sql_credential.rs  sql_retry_interval.rs  tds_enums.rs  test_init.rs  transaction.rs  transaction_binding.rs  type_system.rs
sql-client/src/common/: db_connection_string_builder_util.rs  mod.rs
sql-client/src/retry_enumerators/: mod.rs  sql_exponential_interval_enumerator.rs  sql_fixed_interval_enumerator.rs  sql_incremental_interval_enumerator.rs  sql_none_interval_enumerator.rs
sql-client/src/retry_enumerators2/: mod.rs
test-macros/: Cargo.toml
test-macros/src/: lib.rs
test-utils/: Cargo.toml
