[package]
name = "sql-client"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the .NET Microsoft SQL Server client."
license-file = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/mkb137/sql-client"
keywords = ["sql", "mssql", "ms-sql"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
chrono = "0.4"
log = "0.4"
rand = "0.8"
secstr = "0.5"
thiserror = "1.0"

[dev-dependencies]
ctor = "0.1"
hex = "0.4.3"
log4rs = "1.0.0"
rstest = "0.12.0"
test-macros = { path = "../test-macros" }
test-utils = { path = "../test-utils" }